# fluxdb

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  readmee.md  setup.py
.github/workflows/: Build.yml  build.yml  publish.yml
fluxdb/: __init__.py  admin.py  admin_server.py  buffer_manager.py  collection_manager.py  core.pyx  data_manager.py  database.py  dummy.txt  exceptions.py  fluxdb.py  htmlsite.py  indexing.py  indexing.pyx  record_loader.py  storage.py  transaction_manager.py
static/css/: style.css
templates/admin/: collection.html  edit.html  index.html
